# kicad-signal-path

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/kicad_signal_path/: __init__.py  __main__.py  cli.py  core.py  match.py  types.py  validation.py
tests/: board_factory.py  smoke_test.py  test_measure_kicad_signal_path.py  test_validation.py
