[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.5"]
build-backend = "hatchling.build"

[project]
name = "kicad-signal-path"
dynamic = ["version"]
description = "Measure exact routed pad-to-pad signal lengths from KiCad PCB files."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Ang", email = "mail@angme.org" },
]
maintainers = [
  { name = "Ang", email = "mail@angme.org" },
]
keywords = ["kicad", "pcb", "eda", "signal-integrity", "length-matching"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Leonui/kicad-signal-path"
Repository = "https://github.com/Leonui/kicad-signal-path"
Issues = "https://github.com/Leonui/kicad-signal-path/issues"
Changelog = "https://github.com/Leonui/kicad-signal-path/releases"

[project.scripts]
kicad-signal-path = "kicad_signal_path.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "mypy>=1.13",
]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>.+)$"

[tool.hatch.build]
exclude = [
  "**/*.kicad_pcb",
  "**/*.kicad_sch",
  "**/*.kicad_pro",
  "**/*.kicad_prl",
  "**/*.kicad_dru",
  "**/*.gbr",
  "**/*.gbrjob",
  "**/gerber/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_signal_path"]

[tool.hatch.build.hooks.vcs]
version-file = "src/kicad_signal_path/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "/.github",
  "/.gitignore",
  "/.python-version",
  "/tests",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/_version.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
